--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <scope>test</scope>
             <version>3.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
