chore: add debug profile

--- a/pom.xml
+++ b/pom.xml
@@ -143,4 +143,23 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>wildfly-debug</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.wildfly.plugins</groupId>
+                        <artifactId>wildfly-maven-plugin</artifactId>
+                        <configuration>
+                            <javaOpts>
+                                <javaOpt>-agentlib:jdwp=transport=dt_socket,address=5005,server=y,suspend=y</javaOpt>
+                            </javaOpts>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
